--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "express": "^4.19.2",
+    "nodemon": "^3.1.4",
     "prisma": "^5.18.0"
   }
 }
