--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "hello.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4",
     "prisma": "^5.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
